# multi-agents-collaboration-framework

./: README.md  crew.jsonc  main.py  pyproject.toml  requirements.txt
agents/: lead_competitve_intelligence_r.jsonc  senior_strategic_product_analy.jsonc
knowledge/: user_preference.txt
